woosh install shots

--- a/_includes/slider-woosh.html
+++ b/_includes/slider-woosh.html
@@ -42,14 +42,14 @@
             <strong>Kris Martin</strong><br>
             <em>Do Not Cross the Red Line</em>, 2012<br>
             metal sign, red tape<br>
-            dim<br><br>
+            DV<br><br>
             </div>
 
             <div class="col-md-6">
             <strong>Liz Magor</strong><br>
             <em>KD- The Original</em>, 2000<br>
             silicon rubber, food<br>
-            dim<br><br>
+            14 x 66 cm<br><br>
             </div>
 
         </div>
@@ -71,28 +71,28 @@
             <strong>Ron Terada</strong><br>
             <em>Jeopardy</em>, 1998<br>
             acrylic on canvas<br>
-            dim<br><br>
+            58 x 65 in.<br><br>
             </div>
 
             <div class="col-md-3">
             <strong>Ian Wallace</strong><br>
             <em>Magazine Piece</em>, 1969/2015<br>
             magazine, tape<br>
-            dim<br><br>
+            DV<br><br>
             </div>
 
             <div class="col-md-3">
             <strong>Santiago Sierra</strong><br>
             <em>NO</em>, 2009<br>
             mahogany<br>
-            dim<br><br>
+            N: 32x10x50 O:39x10x50" <br><br>
             </div>
 
             <div class="col-md-3">
             <strong>Steven Shearer</strong><br>
             <em>Diabolical Conquest</em>, 1997<br>
             silkscreen on canvas<br>
-            dim<br><br>
+            23 1/2 x 20 in.<br><br>
             </div>
 
             </div>
@@ -113,21 +113,21 @@
             <strong>Liz Magor</strong><br>
             <em>KD- The Original</em>, 2000<br>
             silicon rubber, food<br>
-            dim<br><br>
+            14 x 66 cm<br><br>
             </div>
 
             <div class="col-md-4">
             <strong>Tatiana Trouve</strong><br>
             <em>29.08.1924</em>, 2010<br>
             bronze, paint<br>
-            dim<br><br>
+            25 x 22 x 15 in.<br><br>
             </div>
 
             <div class="col-md-4">
             <strong>Stan Douglas</strong><br>
             <em>Ballantyne Pier, 18 June 1935</em>, 2008<br>
             digital C-print mounted on dibond<br>
-            dim<br><br>
+            116 x 45 in.<br><br>
             </div>
 
         </div>
@@ -139,14 +139,14 @@
             Available for Free From the White House 
             Hung Upside Down</em>, 2001<br>
             framed c-print, ink<br>
-            dim<br><br>
+            13 x 14 1/2 in.<br><br>
             </div>
 
             <div class="col-md-4">
             <strong>Alicja Kwade</strong><br>
             <em>17.08.1931</em>, 2012<br>
             mirror bronze<br>
-            dim<br><br>
+            39 x 69 cm<br><br>
             </div>
 
             <div class="col-md-4">
@@ -173,34 +173,38 @@
             <strong>Ian Wallace</strong><br>
             <em>Magazine Piece</em>, 1969/2015<br>
             magazine, tape<br>
-            dim<br><br>
+            DV<br><br>
+            </div>
 
             <div class="col-md-4">
             <strong>Santiago Sierra</strong><br>
             <em>NO</em>, 2009<br>
             mahogany<br>
-            dim<br><br>
+            N: 32x10x50" O: 39x10x50" <br><br>
+            </div>
 
             <div class="col-md-4">
             <strong>Steven Shearer</strong><br>
             <em>Diabolical Conquest</em>, 1997<br>
             silkscreen on canvas<br>
-            dim<br><br>
+            23 1/2 x 20 in.<br><br>
             </div>
+            </div>
+            </span></div>
         </div>
         <div class="row">
             <div class="col-md-6">
             <strong>Yevgeniy Fiks</strong><br>
             <em>Adopt Lenin, yf2008-015</em>, 2008<br>
             metal head, shelf, adoption papers<br>
-            dim<br><br>
+            10 in. high<br><br>
             </div>
 
             <div class="col-md-6">
             <strong>Santiago Sierra</strong><br>
             <em>100 Beggars, Plaza Estudiantes, Mexico City</em>, 2005<br>
             digital C-prints<br>
-            dim
+            23.2 x 32 cm each
             </div>
     
             </span></div>
@@ -218,21 +222,21 @@
             <strong>Johannes Wohnseifer</strong><br>
             <em>Spam Painting #13</em>, 2005<br>
             acrylic on aluminum<br>
-            dim<br><br>
+            100 x 140 cm<br><br>
             </div>
 
             <div class="col-md-4">
             <strong>Kelly Mark</strong><br>
             <em>1000 Cast Iron Hits</em>, 1996<br>
             cast iron<br>
-            dim<br><br>
+            2 x 10 1/2 x 2 in.<br><br>
             </div>
 
             <div class="col-md-4">
             <strong>Ron Terada</strong><br>
             <em>Jeopardy</em>, 1998<br>
             acrylic on canvas<br>
-            dim<br><br>
+            58 x 65 in.<br><br>
             </div>
 
 
@@ -253,21 +257,21 @@
             <strong>Steven Shearer</strong><br>
             <em>Diabolical Conquest</em>, 1997<br>
             silkscreen on canvas<br>
-            dim<br><br>
+            23 1/2 x 20 in.<br><br>
             </div>
 
             <div class="col-md-4">
             <strong>Yevgeniy Fiks</strong><br>
             <em>Adopt Lenin, yf2008-015</em>, 2008<br>
             metal head, shelf, adoption papers<br>
-            dim<br><br>
+            10 in. high<br><br>
             </div>
 
             <div class="col-md-4">
             <strong>Santiago Sierra</strong><br>
             <em>100 Beggars, Plaza Estudiantes, Mexico City</em>, 2005<br>
             digital C-prints<br>
-            dim<br><br>
+            23.2 x 32 cm each<br><br>
             </div>
 
         </div>
@@ -285,7 +289,7 @@
             <strong>Alicja Kwade</strong><br>
             <em>17.08.1931</em>, 2012<br>
             mirror bronze<br>
-            dim<br><br>
+            39 x 69 cm<br><br>
 
             
             </span></div>
@@ -303,7 +307,7 @@
             <strong>John McCracken</strong><br>
             <em>Woosh</em>, 1995<br>
             polyester resin, fibreglas, resin<br>
-            dim<br><br>
+            12 x 90 x 3 in.<br><br>
             </div>
 
             
@@ -311,21 +315,21 @@
             <strong>Pier Paulo Calzolari</strong><br>
             <em>Untitled</em>, 1989<br>
             Burnt salt, burnt felt, dyes, lead, refrigeration unit<br>
-            dim<br><br>
+            104 x 89 x 23 in.<br><br>
             </div>
 
             <div class="col-md-3">
             <strong>Andrew Dadson</strong><br>
             <em>White Re-Stretched (Silver)</em>, 2014<br>
             oil on linen<br>
-            dim<br><br>
+            33 x 43.3 cm<br><br>
             </div>
 
             <div class="col-md-3">
             <strong>Carsten Nicolai</strong><br>
             <em>Milch 20 hz</em>, 2011<br>
             pigment print<br>
-            dim<br><br>
+            128 x 152 cm<br><br>
             </div>
         </div>
 
@@ -340,7 +344,8 @@
 
             <strong>Stan Douglas</strong><br>
             <em>Ballantyne Pier, 18 June 1935</em>, 2008<br>
-            digital C-print mounted on dibond
+            digital C-print mounted on dibond<br>
+            116 x 45 in.
             </span></div>
                 
         </div>
@@ -353,7 +358,8 @@
             <strong>Jonathan Horowitz</strong><br>
             <em>Official Portrait of George W Bush Available for Free From <br>
             the White House Hung Upside Down</em>, 2001<br>
-            framed c-print
+            framed c-print<br>
+            13 x 14 1/2 in.
             </span></div>
         </div>
         <div id="fb-jaar" style="max-width: 800px;">
@@ -365,7 +371,8 @@
             
             <strong>Alfredo Jaar</strong><br>
             <em>Three Women</em>, 2010<br>
-            18 spotlights, 3 photographs
+            18 spotlights, 3 photographs<br>
+            DV
             </span></div>
         </div>
         <div id="fb-shearer" style="max-width: 800px;">
@@ -376,7 +383,8 @@
 
             <strong>Steven Shearer</strong><br>
             <em>Diabolical Conquest</em>, 1997<br>
-            silkscreen on canvas
+            silkscreen on canvas<br>
+            23 1/2 x 20 in.
             </span></div>
         </div>
         
