woosh install shots

--- a/_includes/slider-woosh.html
+++ b/_includes/slider-woosh.html
@@ -29,6 +29,7 @@
     </ul>
 
     <div style="display: none;">
+
         <div id="fb-install-01" style="max-width: 800px;">
             <img src="{{ site.url }}assets/img/artworks/woosh/woosh-01.jpg" alt="Installation" />
             <div >
@@ -189,9 +190,9 @@
             silkscreen on canvas<br>
             23 1/2 x 20 in.<br><br>
             </div>
-            </div>
-            </span></div>
+
         </div>
+        
         <div class="row">
             <div class="col-md-6">
             <strong>Yevgeniy Fiks</strong><br>
@@ -207,8 +208,10 @@
             23.2 x 32 cm each
             </div>
     
-            </span></div>
+            </span>
+            </div>
         </div>
+
         <div id="fb-install-05" style="max-width: 800px;">
             <img src="{{ site.url }}assets/img/artworks/woosh/woosh-05.jpg" alt="Installation" />
             <div >
@@ -241,7 +244,8 @@
 
 
         </div>    
-            </span></div>
+            </span>
+            </div>
         </div>
         <div id="fb-install-06" style="max-width: 800px;">
             <img src="{{ site.url }}assets/img/artworks/woosh/woosh-06.jpg" alt="Installation" />
@@ -334,7 +338,7 @@
         </div>
 
 
-            </span></div>
+        </span></div>
         </div>
         <div id="fb-douglas" style="max-width: 1000px;">
             <img src="{{ site.url }}assets/img/artworks/woosh/Douglas.jpg" alt="Sarah Cain" />
