woosh install shots

--- a/_includes/slider-woosh.html
+++ b/_includes/slider-woosh.html
@@ -169,43 +169,37 @@
 
             Installation shot. From left to right:<br /><br />
         <div class="row">
-
             <div class="col-md-4">
-            <strong>Ian Wallace</strong><br>
-            <em>Magazine Piece</em>, 1969/2015<br>
-            magazine, tape<br>
-            DV<br><br>
+                <strong>Ian Wallace</strong><br>
+                <em>Magazine Piece</em>, 1969/2015<br>
+                magazine, tape<br>
+                DV<br><br>
             </div>
-
             <div class="col-md-4">
-            <strong>Santiago Sierra</strong><br>
-            <em>NO</em>, 2009<br>
-            mahogany<br>
-            N: 32x10x50" O: 39x10x50" <br><br>
+                <strong>Santiago Sierra</strong><br>
+                <em>NO</em>, 2009<br>
+                mahogany<br>
+                N: 32x10x50" O: 39x10x50" <br><br>
             </div>
-
             <div class="col-md-4">
-            <strong>Steven Shearer</strong><br>
-            <em>Diabolical Conquest</em>, 1997<br>
-            silkscreen on canvas<br>
-            23 1/2 x 20 in.<br><br>
+                <strong>Steven Shearer</strong><br>
+                <em>Diabolical Conquest</em>, 1997<br>
+                silkscreen on canvas<br>
+                23 1/2 x 20 in.<br><br>
             </div>
-
         </div>
-        
         <div class="row">
             <div class="col-md-6">
-            <strong>Yevgeniy Fiks</strong><br>
-            <em>Adopt Lenin, yf2008-015</em>, 2008<br>
-            metal head, shelf, adoption papers<br>
-            10 in. high<br><br>
+                <strong>Yevgeniy Fiks</strong><br>
+                <em>Adopt Lenin, yf2008-015</em>, 2008<br>
+                metal head, shelf, adoption papers<br>
+                10 in. high<br><br>
             </div>
-
             <div class="col-md-6">
-            <strong>Santiago Sierra</strong><br>
-            <em>100 Beggars, Plaza Estudiantes, Mexico City</em>, 2005<br>
-            digital C-prints<br>
-            23.2 x 32 cm each
+                <strong>Santiago Sierra</strong><br>
+                <em>100 Beggars, Plaza Estudiantes, Mexico City</em>, 2005<br>
+                digital C-prints<br>
+                23.2 x 32 cm each
             </div>
     
             </span>
@@ -244,9 +238,9 @@
 
 
         </div>    
-            </span>
-            </div>
+            </span></div>
         </div>
+
         <div id="fb-install-06" style="max-width: 800px;">
             <img src="{{ site.url }}assets/img/artworks/woosh/woosh-06.jpg" alt="Installation" />
             <div >
