woosh install shots

--- a/_includes/slider-woosh.html
+++ b/_includes/slider-woosh.html
@@ -201,6 +201,7 @@
                 digital C-prints<br>
                 23.2 x 32 cm each
             </div>
+        </div>
     
             </span>
             </div>
