woosh install shots

--- a/_includes/slider-Surrogates.html
+++ b/_includes/slider-Surrogates.html
@@ -57,15 +57,22 @@
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
             Installation shot. From left to right:<br /><br />
+        <div class="row">
+
+            <div class="col-md-6">
             <strong>Mariah Robertson</strong><br>
             <em>59</em>, 2011<br>
             unique chemical treatment on RA-4 paper<br>
             86 x 53 in. <br> <br />
+            </div>
             
+            <div class="col-md-6">
             <strong>Kevin Beasley</strong><br>
             <em>Untitled</em>, 2014<br>
             polyurethane foam, t-shirts, resin<br>
             [15 x 11.5 x 6 in.] x 2
+            </div>
+        </div>
             </span></div>
         </div>
         <div id="fb-install-02" style="max-width: 800px;">
@@ -75,21 +82,30 @@
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
             Installation shot. From left to right:<br /><br />
+        <div class="row">
+
+            <div class="col-md-4">
             <strong>Annette Kelm</strong><br>
             <em>Anonymous, Lilac Clock Bag Buffalo Exchange</em>, 2007<br>
             c-prints on Alu-dibond<br>
             [19 x 23 in.] x 4<br> <br />
+            </div>
             
+            <div class="col-md-4">
             <strong>Stephen Waddell</strong><br>
             <em>Pile</em>, 2006<br>
             inkjet print<br>
             48 x 56 in.
             <br> <br />
-            
+            </div>
+
+            <div class="col-md-4">
             <strong>Kris Martin</strong><br>
             <em>Entscheidungszwanghorror</em>, 2014<br>
             bronze<br>
             11 7/16 x 5 15/16 x 7 7/8 in.
+            </div>
+        </div>
             </span></div>
         </div>
         <div id="fb-install-03" style="max-width: 800px;">
@@ -99,22 +115,30 @@
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
             Installation shot. From left to right:<br /><br />
+        <div class="row">
+            <div class="col-md-4">
             <strong>Marlo Pascual</strong><br>
             <em>Untitled</em>, 2009<br>
             digital c-print, potted plant<br>
             38 x 53 x 36 in.<br><br>
+            </div>
 
+            <div class="col-md-4">
             <strong>Owen Kydd</strong><br>
             <em>Heavy Water</em>, 2015<br>
             video on square digital display with media player<br>
             16 1/4 x 16 1/4 x 7 in.<br><br>
+            </div>
 
+            <div class="col-md-4">
             <strong>Walead Beshty</strong><br>
-            <em>Four Magnet, Three Color Curl (CMY: Irvine, California, September 13th 2009, <br>
-            Fuji Crystal Archive Type C) / Abstract (Four Magnet, Three Color Curl (CMY: Irvine, <br>
+            <em>Four Magnet, Three Color Curl (CMY: Irvine, California, September 13th 2009, 
+            Fuji Crystal Archive Type C) / Abstract (Four Magnet, Three Color Curl (CMY: Irvine, 
             California, September 13th 2009, Fuji Crystal Archive Type C)</em>, 2012<br>
             colour photographic paper<br>
             50 x 107 in. and 30 x 40 in.
+            </div>
+        </div>
             </span></div>
         </div>
         <div id="fb-install-04" style="max-width: 500px;">
