--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
     {% include bootstrap-core-js.html %}
     {% if page.slick == true %}{% include slick-js.html %}{% endif %}
     {% include ie10-viewport-fix.html %}
+    {% include google-analytics.html %}
   </body>
 
 </html>
