--- a/_includes/slider-Surrogates.html
+++ b/_includes/slider-Surrogates.html
@@ -2,34 +2,33 @@
     <ul class="slick-01">
     
         <div><a  href="#fb-cain" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/cain-sqr.jpg" alt="Sarah Cain"/></a></div>
+            <img data-lazy="{{ site.url }}/assets/img/artworks/surrogates/cain-sqr.jpg" alt="Sarah Cain"/></a></div>
         <div><a  href="#fb-install-01" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-01-sqr.jpg" alt="Installation Shot"/></a></div>
+            <img data-lazy="{{ site.url }}/assets/img/artworks/surrogates/surrogates-01-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-02" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-02-sqr.jpg" alt="Installation Shot"/></a></div>
+            <img data-lazy="{{ site.url }}/assets/img/artworks/surrogates/surrogates-02-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-03" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-03-sqr.jpg" alt="Installation Shot"/></a></div>
+            <img data-lazy="{{ site.url }}/assets/img/artworks/surrogates/surrogates-03-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-04" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-04-sqr.jpg" alt="Installation Shot"/></a></div>
+            <img data-lazy="{{ site.url }}/assets/img/artworks/surrogates/surrogates-04-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-05" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-05-sqr.jpg" alt="Installation Shot"/></a></div>
+            <img data-lazy="{{ site.url }}/assets/img/artworks/surrogates/surrogates-05-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-06" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-06-sqr.jpg" alt="Installation Shot"/></a></div>
+            <img data-lazy="{{ site.url }}/assets/img/artworks/surrogates/surrogates-06-sqr.jpg" alt="Installation Shot"/></a></div>
         <div><a  href="#fb-install-07" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-07-sqr.jpg" alt="Installation Shot"/></a></div> 
+            <img data-lazy="{{ site.url }}/assets/img/artworks/surrogates/surrogates-07-sqr.jpg" alt="Installation Shot"/></a></div> 
         <div><a  href="#fb-install-08" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/surrogates-08-sqr.jpg" alt="Installation Shot"/></a></div> 
-       
+            <img data-lazy="{{ site.url }}/assets/img/artworks/surrogates/surrogates-08-sqr.jpg" alt="Installation Shot"/></a></div> 
         <div><a  href="#fb-macleod" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/MacLeod-sqr.jpg" alt="Myfanwy MacLeod"/></a></div>
+            <img data-lazy="{{ site.url }}/assets/img/artworks/surrogates/MacLeod-sqr.jpg" alt="Myfanwy MacLeod"/></a></div>
         <div><a  href="#fb-beasley" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/beasley-sqr.jpg" alt="Kevin Beasley"/></a></div>
+            <img data-lazy="{{ site.url }}/assets/img/artworks/surrogates/beasley-sqr.jpg" alt="Kevin Beasley"/></a></div>
         <div><a  href="#fb-beshty" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/beshty-sqr.jpg" alt="Walead Beshty"/></a></div>
+            <img data-lazy="{{ site.url }}/assets/img/artworks/surrogates/beshty-sqr.jpg" alt="Walead Beshty"/></a></div>
         <div><a  href="#fb-martin" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/martin-sqr.jpg" alt="Kris Martin"/></a></div>
+            <img data-lazy="{{ site.url }}/assets/img/artworks/surrogates/martin-sqr.jpg" alt="Kris Martin"/></a></div>
         <div><a  href="#fb-pascual" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/surrogates/pascual-sqr.jpg" alt="Marlo Pascual"/></a></div>
+            <img data-lazy="{{ site.url }}/assets/img/artworks/surrogates/pascual-sqr.jpg" alt="Marlo Pascual"/></a></div>
         
 
         
@@ -39,7 +38,7 @@
 
     <div style="display: none;">
         <div id="fb-cain" style="max-width: 500px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/Cain-2010.jpg" alt="Sarah Cain" />
+            <img src="{{ site.url }}/assets/img/artworks/surrogates/Cain-2010.jpg" alt="Sarah Cain" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -52,7 +51,7 @@
                 
         </div>
         <div id="fb-install-01" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-01.jpg" alt="Installation" />
+            <img src="{{ site.url }}/assets/img/artworks/surrogates/surrogates-01.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -76,7 +75,7 @@
             </span></div>
         </div>
         <div id="fb-install-02" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-02.jpg" alt="Installation" />
+            <img src="{{ site.url }}/assets/img/artworks/surrogates/surrogates-02.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -109,7 +108,7 @@
             </span></div>
         </div>
         <div id="fb-install-03" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-03.jpg" alt="Installation" />
+            <img src="{{ site.url }}/assets/img/artworks/surrogates/surrogates-03.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -142,97 +141,129 @@
             </span></div>
         </div>
         <div id="fb-install-04" style="max-width: 500px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-04.jpg" alt="Installation" />
+            <img src="{{ site.url }}/assets/img/artworks/surrogates/surrogates-04.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
             Installation shot. From left to right:<br /><br />
-
+        <div class="row">
+            <div class="col-md-4">
             <strong>Kim Kennedy Austin</strong><br>
             <em>Audel’s Answers on Blue Print Reading</em>, 2006<br>
             embroidery floss and masking tape on cross-stitched fabric<br>
             20 x 15 in<br><br>
+            </div>
 
+            <div class="col-md-4">
             <strong>Tim Lee</strong><br>
             <em>Alexander Rodchenko, Spacial Construction No. 11, Square in Square, 1918</em>, 2013<br>
             wood<br><br>
+            </div>
 
+            <div class="col-md-4">
             <strong>Geoffrey Farmer</strong><br>
             <em>Sagger-Safers, Saddled, Stoned and Sanguine</em>, 2013<br>
             paper cutouts, wood, glass paint bottle<br>
             15 x 9 x 6 in.
+            </div>
+        </div>
             </span></div>
         </div>
         <div id="fb-install-05" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-05.jpg" alt="Installation" />
+            <img src="{{ site.url }}/assets/img/artworks/surrogates/surrogates-05.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
             Installation shot. From left to right:<br /><br />
-
+        <div class="row">
+            <div class="col-md-6">
             <strong>Walead Beshty</strong><br>
-            <em>Four Magnet, Three Color Curl (CMY: Irvine, California, September 13th 2009, <br>
-            Fuji Crystal Archive Type C) / Abstract (Four Magnet, Three Color Curl (CMY: Irvine, <br>
+            <em>Four Magnet, Three Color Curl (CMY: Irvine, California, September 13th 2009, 
+            Fuji Crystal Archive Type C) / Abstract (Four Magnet, Three Color Curl (CMY: Irvine, 
             California, September 13th 2009, Fuji Crystal Archive Type C)</em>, 2012<br>
             colour photographic paper<br>
             50 x 107 in. and 30 x 40 in.<br><br>
+            </div>
 
-             <strong>Myfanwy MacLeod</strong><br>
+            <div class="col-md-6">
+            <strong>Myfanwy MacLeod</strong><br>
             <em>Exorcist series</em>, 2009<br>
             cut film posters<br>
             [33 x 33 inches] x 3<br><br>
+            </div>
+        </div>
+        <div class="row">
 
+            <div class="col-md-6">
             <strong>Kim Kennedy Austin</strong><br>
             <em>Clear Eyes, Full Hearts, Can’t Lose</em>, 2014<br>
             watercolour on paper<br>
             14 1/2 x 17 3/4 in.<br><br>
+            </div>
 
+            <div class="col-md-6">
             <strong>Kris Martin</strong><br>
             <em>Entscheidungszwanghorror</em>, 2014<br>
             bronze
             11 7/16 x 5 15/16 x 7 7/8 in.
+            </div>
+        </div>
             </span></div>
         </div>
         <div id="fb-install-06" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-06.jpg" alt="Installation" />
+            <img src="{{ site.url }}/assets/img/artworks/surrogates/surrogates-06.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
 
             Installation shot. From left to right:<br /><br />
+        <div class="row">
+
+            <div class="col-md-6">
             <strong>Lyman A. William</strong><br>
             <em>The Road through the Forest</em>, 2008<br>
             mixed media<br><br>
+            </div>
 
+            <div class="col-md-6">
             <strong>Rodney Graham</strong><br>
             <em>Pipecleaner Artist</em>, 2013<br>
             painted aluminum lightbox, transmounted chromogenic transparency<br>
             [90 5/8 x 146 1/4 x 7 in.] x 2
+            </div>
+        </div>
             </span></div>
         </div>
         <div id="fb-install-07" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-07.jpg" alt="Installation" />
+            <img src="{{ site.url }}/assets/img/artworks/surrogates/surrogates-07.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
             Installation shot. From left to right:<br /><br />
+        <div class="row">
+
+            <div class="col-md-6">
             <strong>Kim Kennedy Austin</strong><br>
             <em>Clear Eyes, Full Hearts, Can’t Lose</em>, 2014<br>
             watercolour on paper<br>
             14 1/2 x 17 3/4 in.<br><br>
+            </div>
 
+            <div class="col-md-6">
             <strong>Kris Martin</strong><br>
             <em>Entscheidungszwanghorror</em>, 2014<br>
             bronze<br>
             11 7/16 x 5 15/16 x 7 7/8 in.
+            </div>
+        </div>
             </span></div>
         </div>
         <div id="fb-install-08" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/surrogates-08.jpg" alt="Installation" />
+            <img src="{{ site.url }}/assets/img/artworks/surrogates/surrogates-08.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -244,7 +275,7 @@
             </span></div>
         </div>
         <div id="fb-macleod" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/MacLeod-2009.jpg" alt="Installation" />
+            <img src="{{ site.url }}/assets/img/artworks/surrogates/MacLeod-2009.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -256,7 +287,7 @@
             </span></div>
         </div>
         <div id="fb-beshty" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/Beshty-2012-520.jpg" alt="Installation" />
+            <img src="{{ site.url }}/assets/img/artworks/surrogates/Beshty-2012-520.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -271,7 +302,7 @@
             </span></div>
         </div>
         <div id="fb-beasley" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/Beasley-2014.jpg" alt="Installation" />
+            <img src="{{ site.url }}/assets/img/artworks/surrogates/Beasley-2014.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -283,7 +314,7 @@
             </span></div>
         </div>
         <div id="fb-martin" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/Martin-391x520.jpg" alt="Installation" />
+            <img src="{{ site.url }}/assets/img/artworks/surrogates/Martin-391x520.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
@@ -295,7 +326,7 @@
             </span></div>
         </div>
         <div id="fb-pascual" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates/Pascual-624x520.jpg" alt="Installation" />
+            <img src="{{ site.url }}/assets/img/artworks/surrogates/Pascual-624x520.jpg" alt="Installation" />
             <div >
             <br />
             <span class="artcaption" style="font-size: 10pt; color: #808080">
