--- a/_includes/static-navbar.html
+++ b/_includes/static-navbar.html
@@ -17,13 +17,14 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Exhibitions <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li class="dropdown-header">Recent Exhibitions</li>
-                <li><a href="{{ site.url }}exhibitions/2016/surrogates/">Surrogates</a></li>
-                <li><a href="{{ site.url }}exhibitions/2015/woosh/">WOOSH</a></li>
+                <li><a href="{{ site.url }}/exhibitions/2016/surrogates/">Surrogates</a></li>
+                <li><a href="{{ site.url }}/exhibitions/2015/woosh/">WOOSH</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="{{ site.baseurl }}/exhibitions">All Exhibitions</a></li>
               </ul>
             </li>
               <li><a href="{{ site.baseurl }}/events">Events</a></li>
+              <li><a href="{{ site.baseurl }}/residency">Residency</a></li>
               <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
               
             </ul>
